--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi veritatis dolorum provident blanditiis asperiores nesciunt! Perferendis suscipit necessitatibus commodi dignissimos laudantium hic nihil incidunt architecto! Quisquam tenetur quas laboriosam non.</p>
     <a href="#">Lien 1</a>
     <section id="masection">
-        <a href="#">Lien 2</a>
+        <a href="#">Lien 2a</a>
     </section>
     <section>
         <a href="#" class="lienautre">Lien 3</a>
