--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Test</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut odio, architecto laboriosam saepe expedita voluptas aliquam suscipit distinctio ex numquam adipisci quibusdam harum nemo autem eius dolore consectetur in dolor.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi veritatis dolorum provident blanditiis asperiores nesciunt! Perferendis suscipit necessitatibus commodi dignissimos laudantium hic nihil incidunt architecto! Quisquam tenetur quas laboriosam non.</p>
+    <h2>Sous titre</h2>
+    <blockquote>
+        texte en citation
+    </blockquote>
     <a href="#">Lien 1</a>
     <section id="masection">
         <a href="#">Lien 2a</a>
