--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,10 @@
     <h1>Test</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut odio, architecto laboriosam saepe expedita voluptas aliquam suscipit distinctio ex numquam adipisci quibusdam harum nemo autem eius dolore consectetur in dolor.</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi veritatis dolorum provident blanditiis asperiores nesciunt! Perferendis suscipit necessitatibus commodi dignissimos laudantium hic nihil incidunt architecto! Quisquam tenetur quas laboriosam non.</p>
+    <div class="block-error">Test erreur</div>
+    <div class="block-warning">Test attention</div>
+    <div class="block-info">Test information</div>
+    <div class="block-valid">Test validation</div>
     <h2>Sous titre</h2>
     <blockquote>
         texte en citation
